--- a/eventos_modificadores.html
+++ b/eventos_modificadores.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html class="no-js"> 
+<html lang="pt-br"> 
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -37,7 +37,7 @@
                     showAlert(event){
                         //event.preventDefault()
 
-                        alert("Clicou")
+                        alert("Clicou no link")
                     }
                 }
             })
