--- a/eventos-parametros.html
+++ b/eventos-parametros.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <title>v-html Vue JS</title>
+    <title>Eventos com Vue JS</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -25,12 +25,13 @@
             },
             methods:{
                 changeInput: function(event){
-                    console.log(event.target.value)
+                    console.log(event.target.value)                    
                 },
                 changeInputTwo: function(value){
                     this.count += value
                 },
                 changeInputThree(value, event){
+                    console.log(event.target.value)                    
                     value += parseInt(event.target.value)
                     this.count += value
                 }          
