--- a/propriedades-computadas.html
+++ b/propriedades-computadas.html
@@ -12,7 +12,7 @@
     <div id="app">
         <button @click="count++">Incrementar</button>
         <button @click="count--">Decrementar</button>
-        <button @click="countTwo--">Decrementar</button>
+        <button @click="countTwo--">Incrementar 2</button>
         <p>{{ count }} | {{ countComputed }} | {{ countMethod()  }}</p>
         <p>{{ countTwo }}</p>
        
