--- a/eventos-teclas-modificadoras-sistema.html
+++ b/eventos-teclas-modificadoras-sistema.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div id="app">
-        <div @click.ctrl.63="testeEvent">
+        <!-- <div @click.ctrl.63="testeEvent"> -->
+        <div @click.meta="testeEvent">
             Clique Aqui!!!
         </div>
     </div>
