--- a/eventos_modificadores.html
+++ b/eventos_modificadores.html
@@ -17,10 +17,10 @@
             <form action="#" method="POST" @submit.prevent="showAlert">
                 <input type="text" placeholder="Nome">
 
-                <button type="submit">Enviar Formulário</button>
+                <button type="submit">Enviar Formulário</butto  n>
             </form>
 
-            <button @click.once="showAlert">Clique me</button>
+            <button @click.once="showAlert">Clique me!</button>
         </div>
        
         
