--- a/propriedades-computadas.html
+++ b/propriedades-computadas.html
@@ -8,14 +8,13 @@
     
 </head>
 <body>
-
+    <!-- Em propriedades computadas ele armazena em cache e chama apenas o metódo sem percorrer todos os metodos -->
     <div id="app">
         <button @click="count++">Incrementar</button>
         <button @click="count--">Decrementar</button>
         <button @click="countTwo--">Incrementar 2</button>
         <p>{{ count }} | {{ countComputed }} | {{ countMethod()  }}</p>
-        <p>{{ countTwo }}</p>
-       
+        <p>{{ countTwo }}</p>       
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>  
