--- a/filters.html
+++ b/filters.html
@@ -43,7 +43,7 @@
                     {id: 4, name: "Lavar Pia", completed:true},
                 ]
             },
-            //filtro para uma instancia vue
+            //filtro para uma instancia vue // so pode ser usado nesse template
             filters:{
                 toUpperCase(val){
                     return val.toUpperCase()
